--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.ProductDetailsActivity"></activity>
+        <activity android:name=".activity.ProfileDetailActivity"></activity>
+        <activity android:name=".activity.ProductDetailsActivity" />
         <activity android:name=".activity.SignUpActivity" />
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.LoginActivity">
